--- a/.env.stage.prod
+++ b/.env.stage.prod
@@ -5,5 +5,5 @@ DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postres
 DB_DATABASE=larc-budget-management
-JWT_SECRET=qqL0^kB=o6y%pfEBf9E*!DhtwV47UK
-JWT_SECRET_EXPIRES_IN=3600
+JWT_SECRET_EXPIRES_IN=36000
+JWT_SECRET=qqL0^kBBo6y%pfEBf9E*!DhtwV47UK
