--- a/.env.stage.prod
+++ b/.env.stage.prod
@@ -6,4 +6,4 @@ DB_USERNAME=postgres
 DB_PASSWORD=postres
 DB_DATABASE=larc-budget-management
 JWT_SECRET_EXPIRES_IN=36000
-JWT_SECRET=qqL0^kBBo6y%pfEBf9E*!DhtwV47UK
+JWT_SECRET=DhtwV47UK
